--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -68,7 +68,7 @@ which you don't tend to find that much in your typical Java enterprise applicati
 I'd say, yes and no.
 Indeed it may not be that beneficial for say a CRUD application copying some data from left to right.
 But there are many interesting applications in areas like image processing, AI, parsing,
-(https://github.com/simdjson/simdjson[SIMD-based JSON parsing] a prominently discussed example),
+(https://github.com/simdjson/simdjson[SIMD-based JSON parsing] being a prominently discussed example),
 text processing,
 https://wiki.mozilla.org/SIMD/Uses/Conversion[data type conversions], and many others.
 In that regard, I'd expect that JEP 338 will pave the path for using Java in many interesting use cases,
