--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -517,9 +517,32 @@ FizzBuzzBenchmark.simdFizzBuzzSeparateMaskIndex      256  thrpt    5   998979,32
 The scalar implementation on the M1 out-performs the x86 MacBook Pro by quite a bit,
 but SIMD numbers are significantly lower.
 
-I haven't checked the assembly code, but solely based on the figures, my guess is that the JEP 338 implementation in the current JDK 16 builds does not yet support AArch64, and the API falls back to scalar execution.
++++<del>+++I haven't checked the assembly code, but solely based on the figures, my guess is that the JEP 338 implementation in the current JDK 16 builds does not yet support AArch64, and the API falls back to scalar execution+++</del>+++.
+
 Here it would be nice to have some method in the API which reveals whether SIMD support is provided by the current platform or not,
 as e.g. done by .NET with its https://docs.microsoft.com/en-us/dotnet/api/system.numerics.vector.ishardwareaccelerated?view=net-5.0#System_Numerics_Vector_IsHardwareAccelerated[`Vector.IsHardwareAccelerated()`] method.
+
+_Update, March 9th:_ After asking about this on the https://mail.openjdk.java.net/pipermail/panama-dev/[panama-dev] mailing list, Ningsheng Jian from Arm https://mail.openjdk.java.net/pipermail/panama-dev/2021-March/012386.html[explained] that the AArch64 NEON instruction set has a maximum hardware vector size of 128 bits;
+hence the Vector API is transparently falling back to the Java implementation in our case of using 256 bits.
+By passing the `-XX:+PrintIntrinsics` flag you can inspect which API calls get intrinsified (i.e. executed via corresponding hardware instructions) and which ones not.
+When running the main class from above with this option, we get the relevant information
+(output slightly adjusted for better readability):
+
+[source]
+----
+@ 31   jdk.internal.vm.vector.VectorSupport::load (38 bytes) ↩
+    failed to inline (intrinsic)
+...
+@ 26   jdk.internal.vm.vector.VectorSupport::blend (38 bytes) ↩
+    failed to inline (intrinsic)
+...
+@ 42   jdk.internal.vm.vector.VectorSupport::store (38 bytes) ↩
+    failed to inline (intrinsic)
+
+** not supported: arity=0 op=load vlen=8 etype=int ismask=no
+** not supported: arity=2 op=blend vlen=8 etype=int ismask=useload
+** not supported: arity=1 op=store vlen=8 etype=int ismask=no
+----
 
 Fun fact: during the entire benchmark runtime of 10 min the fan of the Mac Mini was barely to hear, if at all.
 Definitely a very exciting platform, and I'm looking forward to doing more Java experiments on it soon.
