--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -208,7 +208,7 @@ public class FizzBuzz {
       VectorMask<Integer> threeMask = threes.get(i%3);
       VectorMask<Integer> fiveMask = fives.get(i%5);
 
-      resultMasks.add(threeMask.or(fm)); // <5>
+      resultMasks.add(threeMask.or(fiveMask)); // <5>
       resultVectors[i] = IntVector.zero(SPECIES) // <6>
           .blend(FIZZ, threeMask)
           .blend(BUZZ, fiveMask)
