--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -175,7 +175,7 @@ Here is a visualization of the approach, assuming a vector length of eight eleme
 image::simd_fizzbuzz.png[Determining FizzBuzz Values Via Vector Blending]
 
 So let's see how we can implement this using the Vector API.
-The mask and second input vector repeat every 120 characters (least common multiple of 8 and 15),
+The mask and second input vector repeat every 120 elements (least common multiple of 8 and 15),
 so 15 masks and vectors need to be determined.
 They can be created like so:
 
