--- a/content/blog/the-anatomy-of-ct-sym-how-javac-ensures-backwards-compatibility.asciidoc
+++ b/content/blog/the-anatomy-of-ct-sym-how-javac-ensures-backwards-compatibility.asciidoc
@@ -159,7 +159,7 @@ the top-level directory names encode Java version(s),
 and there's a new version of the signature file whenever its API changed.
 I.e. `java.util.List` changed in Java 7, 8, 9, 10 (_A_), and 11 (_B_),
 and has remained stable since then, i.e. from version 11 to 16,
-there have been noch changes to the public `List` API.
+there have been no changes to the public `List` API.
 
 So let's dive in a bit further and compare the signature files of Java 8 and 9.
 As JEP 247 states that these files are (stripped-down) class files,
