--- a/content/blog/exploring-zookeeper-less-kafka.asciidoc
+++ b/content/blog/exploring-zookeeper-less-kafka.asciidoc
@@ -454,7 +454,7 @@ Rightly so: Kafka-based metadata storage and leader election will greatly simpli
 Lifting the requirement for running separate ZooKeeper processes or even machines should also help to make things more cost-effective,
 so you should benefit from this change no matter whether you're running Kafka yourself or are using a managed service offering.
 
-The early access release of ZooKeeper-less Kafka in version 2.8 gives a first impression of what will hopefully be the standard way of running Kafka in the not too distant future.
+The early access release of ZK-less Kafka in version 2.8 gives a first impression of what will hopefully be the standard way of running Kafka in the not too distant future.
 As very clearly stated in the https://github.com/apache/kafka/blob/trunk/config/kraft/README.md#missing-features[KRaft README],
 you should not use this in production yet;
 this matches with the observerations made above:
@@ -465,7 +465,7 @@ such as support of transactions, adding partitions to existing topics, partition
 Lastly, any distributed system should only be fully trusted after going through the grinder of the https://jepsen.io/[Jepsen] test suite,
 which I'm sure will only be a question of time.
 
-Despite the early state, I would very much recommend to get started testing ZooKeeper-less Kafka at this point,
+Despite the early state, I would very much recommend to get started testing ZK-less Kafka at this point,
 so to get a feeling for it and of course to report back any findings and insights.
 To do so, either download the https://kafka.apache.org/downloads[upstream Kafka distribution],
 or build the Debezium 1.6 container image for Kafka with preliminary https://github.com/gunnarmorling/docker-images/tree/DBZ-3444/kafka/1.6[support for KRaft mode],
