Adding talks of '21

--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -10,6 +10,17 @@ I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOn
 
 If you'd like to have me as a speaker at your conference or meet-up, please get in touch.
 
+== 2021
+
+* Apache Pinot Meetup (joint presentation with Kenny Bastani; online): https://www.youtube.com/watch?v=yWFFOkWlLoY[Analyzing Real-time Order Deliveries using CDC with Debezium and Pinot]
+* MongoDB World (joint presentation with Hans-Peter Grahsl; online): https://speakerdeck.com/hpgrahsl/dissecting-our-legacy-the-strangler-fig-pattern-with-apache-kafka-debezium-and-mongodb-at-mongodb-dot-live-2021[Dissecting our Legacy: The Strangler Fig Pattern with Apache Kafka, Debezium and MongoDB]
+* jLove (joint presentation with Hans-Peter Grahsl; online): https://jlove.konfy.care/schedule.html[Change Data Streaming Patterns in Distributed Systems]
+* Berlin Buzzwords (joint presentation with Hans-Peter Grahsl; online): Change Data Streaming Patterns in Distributed Systems (https://www.youtube.com/watch?v=CLv2EcYnr2g[recording], https://speakerdeck.com/hpgrahsl/change-data-streaming-patterns-in-distributed-systems-at-berlinbuzzwords-2021[slides])
+* The Developer's Conference (joint presentation with Hans-Peter Grahsl; online): https://thedevconf.com/tdc/2021/connections/trilha-apis-e-microservices-internacional[Change Data Streaming Patterns in Distributed Systems ] (https://speakerdeck.com/hpgrahsl/change-data-streaming-patterns-in-distributed-systems-at-thedevconf-tdc-connections-2021[slides])
+* Kafka Summit Europe (joint presentation with Hans-Peter Grahsl; online): Advanced Change Data Streaming Patterns in Distributed Systems (https://www.confluent.io/events/kafka-summit-europe-2021/advanced-change-data-streaming-patterns-in-distributed-systems/[recording], https://speakerdeck.com/hpgrahsl/advanced-change-data-streaming-patterns-in-distributed-systems-at-kafka-summit-europe-2021[slides])
+* DevNation Tech Talk (online): Continuous performance regression testing with JfrUnit (https://www.youtube.com/watch?v=Lgr3orOi3sI[recording] https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit[slides])
+* Bordeaux JUG (joint presentation with Katja Aresti; online): https://www.youtube.com/watch?v=pXkM9tlxwHY[Don't fear outdated caches -- change data capture to the rescue! Let's discover Infinispan and Debezium]
+
 == 2020
 
 * JokerConf (online): https://jokerconf.com/en/2020/talks/4ycp4y8xshqmlt0kbpacwv/[Change data capture pipelines with Debezium and Kafka Streams]
