--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -18,7 +18,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 * Berlin Buzzwords (joint presentation with Hans-Peter Grahsl; online): Change Data Streaming Patterns in Distributed Systems (https://www.youtube.com/watch?v=CLv2EcYnr2g[recording], https://speakerdeck.com/hpgrahsl/change-data-streaming-patterns-in-distributed-systems-at-berlinbuzzwords-2021[slides])
 * The Developer's Conference (joint presentation with Hans-Peter Grahsl; online): https://thedevconf.com/tdc/2021/connections/trilha-apis-e-microservices-internacional[Change Data Streaming Patterns in Distributed Systems ] (https://speakerdeck.com/hpgrahsl/change-data-streaming-patterns-in-distributed-systems-at-thedevconf-tdc-connections-2021[slides])
 * Kafka Summit Europe (joint presentation with Hans-Peter Grahsl; online): Advanced Change Data Streaming Patterns in Distributed Systems (https://www.confluent.io/events/kafka-summit-europe-2021/advanced-change-data-streaming-patterns-in-distributed-systems/[recording], https://speakerdeck.com/hpgrahsl/advanced-change-data-streaming-patterns-in-distributed-systems-at-kafka-summit-europe-2021[slides])
-* DevNation Tech Talk (online): Continuous performance regression testing with JfrUnit (https://www.youtube.com/watch?v=Lgr3orOi3sI[recording] https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit[slides])
+* DevNation Tech Talk (online): Continuous performance regression testing with JfrUnit (https://www.youtube.com/watch?v=Lgr3orOi3sI[recording], https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit[slides])
 * Bordeaux JUG (joint presentation with Katja Aresti; online): https://www.youtube.com/watch?v=pXkM9tlxwHY[Don't fear outdated caches -- change data capture to the rescue! Let's discover Infinispan and Debezium]
 
 == 2020
