Updating projects page

--- a/content/projects/index.asciidoc
+++ b/content/projects/index.asciidoc
@@ -18,6 +18,26 @@ https://quarkus.io/[Quarkus] is a "Kubernetes Native Java stack tailored for Ope
 My contributions to Quarkus are centered around its https://quarkus.io/guides/kafka-streams[extension for Kafka Streams],
 which I initially created.
 
+JfrUnit::
+https://github.com/moditect/jfrunit[JfrUnit] is a JUnit extension for asserting JDK Flight Recorder events.
+It comes handy for ensuring the right custom JFR events are emitted by a JVM-based library or application as well as for identifying potential performance regressions by tracking JFR events for memory allocation, network I/O, etc.
+
+kcctl::
+https://github.com/kcctl/kcctl[kcctl] is a command-line client for working with Kafka Connect,
+allowing to examine the state of the Connect cluster and individual connectors, register and start/stop connectors, etc.
+It is based on Quarkus and provided as a native binary for Linux, macOS, and Windows via GraalVM.
+
+ModiTect, Layrry, and Deptective::
+https://github.com/moditect/moditect[ModiTect] is a family of Maven and Gradle plug-ins around the Java Module System,
+e.g. for creating module descriptors and building modular runtime images via jlink.
+https://github.com/moditect/layrry[Layrry] is an API and launcher for modularized Java applications, leveraging the Java Module System's notion of module layers, e.g. allowing to work with multiple versions of one dependency.
+https://github.com/moditect/deptective[Deptective] is a plug-in for the Java compiler (javac) for enforcing package dependencies within Java projects based on a declarative architecture definition.
+
+MapStruct::
+https://mapstruct.org/[MapStruct] is a compile-time code generator for bean-to-bean mappings.
+Based on annotated Java interfaces, MapStruct generates mapping code that it is fully type-safe and very efficient by avoiding any usage of reflection.
+I was the creator and initial project lead of MapStruct.
+
 Bean Validation and Hibernate Validator::
 https://beanvalidation.org/[Bean Validation] is a Java specification which lets you express constraints on object models via annotations.
 Originally developed at the JCP, it's now part of the Jakarta EE umbrella at the Eclipse foundation.
@@ -26,13 +46,3 @@ I have been the spec lead for Bean Validation 2.0 (JSR 380) and the lead of the 
 Other Hibernate Projects::
 As part of the https://hibernate.org/[Hibernate] team, I've contributed to different projects such as Hibernate OGM (an effort to access NoSQL stores with JPA),
 Hibernate Search (full-text search for domain models based on Apache Lucene and Elasticsearch) and Hibernate ORM.
-
-MapStruct::
-https://mapstruct.org/[MapStruct] is a compile-time code generator for bean-to-bean mappings.
-Based on annotated Java interfaces, MapStruct generates mapping code that it is fully type-safe and very efficient by avoiding any usage of reflection.
-I was the creator and initial project lead of MapStruct.
-
-Deptective and ModiTect::
-https://github.com/moditect/moditect[ModiTect] is a family of Maven and Gradle plug-ins around the Java Module System,
-e.g. for creating module descriptors and building modular runtime images via jlink.
-https://github.com/moditect/deptective[Deptective] is a plug-in for the Java compiler (javac) for enforcing package dependencies within Java projects based on a declarative architecture definition.
