--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -12,6 +12,10 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2021
 
+* P99 Conf (online): Continuous Performance Regression Testing with JfrUnit [https://www.p99conf.io/]
+* Accento (online): To the Moon and Beyond With Java 17 APIs![https://2021.accento.dev/talks/java-17-apis/]; Panel https://2021.accento.dev/panels/java/[The Present and Future of Java (17)]
+* Heise betterCode() Java (online): https://java.bettercode.eu/veranstaltung-13495-se-0-die-wichtigsten-neuerungen-seit-java-11-deep-dive-3-mit-java-17-apis-zum-mond-und-weiter.html[Mit Java-17-APIs zum Mond und weiter]
+* Kafka Summit Americas (joint presentation with Hans-Peter Grahsl; online): https://www.kafka-summit.org/sessions/dissecting-our-legacy-the-strangler-fig-pattern-with-debezium-apache-kafka[Dissecting our Legacy: The Strangler Fig Pattern with Debezium, Apache Kafka & MongoDB]
 * Apache Pinot Meetup (joint presentation with Kenny Bastani; online): https://www.youtube.com/watch?v=yWFFOkWlLoY[Analyzing Real-time Order Deliveries using CDC with Debezium and Pinot]
 * MongoDB World (joint presentation with Hans-Peter Grahsl; online): https://speakerdeck.com/hpgrahsl/dissecting-our-legacy-the-strangler-fig-pattern-with-apache-kafka-debezium-and-mongodb-at-mongodb-dot-live-2021[Dissecting our Legacy: The Strangler Fig Pattern with Apache Kafka, Debezium and MongoDB]
 * jLove (joint presentation with Hans-Peter Grahsl; online): https://jlove.konfy.care/schedule.html[Change Data Streaming Patterns in Distributed Systems]
