Adding latest conferences

--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -12,6 +12,8 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2021
 
+* Flink Forward (joint presentation with Hans-Peter Grahsl; online): https://www.flink-forward.org/global-2021/conference-program#change-data-streaming-patterns-in-distributed-systems[Change Data Streaming Patterns in Distributed Systems]
+* Voxxed Days Romania (joint presentation with Hans-Peter Grahsl; online): https://romania.voxxeddays.com/talk/?id=3318[Dissecting our Legacy: The Strangler Fig Pattern with Apache Kafka, Debezium and MongoDB]
 * P99 Conf (online): https://www.p99conf.io/[Continuous Performance Regression Testing with JfrUnit]
 * Accento (online): https://2021.accento.dev/talks/java-17-apis/[To the Moon and Beyond With Java 17 APIs!]; Panel https://2021.accento.dev/panels/java/[The Present and Future of Java (17)]
 * Heise betterCode() Java (online): https://java.bettercode.eu/veranstaltung-13495-se-0-die-wichtigsten-neuerungen-seit-java-11-deep-dive-3-mit-java-17-apis-zum-mond-und-weiter.html[Mit Java-17-APIs zum Mond und weiter]
