[Desk] Addressing review comments

--- a/content/blog/whats-on-my-desk.asciidoc
+++ b/content/blog/whats-on-my-desk.asciidoc
@@ -52,7 +52,7 @@ I never was a fan of multi-screen set-ups due to the inevitable frames between s
 So thanks a lot for the recommendation, Emmanuel!
 
 Some folks use window managers to arrange their application windows on large screens
-(e.g. https://rectangleapp.com/[Rectangle on macOS], some more alternatives are discussed in https://twitter.com/glaforge/status/1447117746895040512[this thread] by Guillaume Laforge),
+(e.g. https://rectangleapp.com/[Rectangle on macOS], a few more alternatives are discussed in https://twitter.com/glaforge/status/1447117746895040512[this thread] by Guillaume Laforge),
 but I find myself just manually organizing things in roughly three columns:
 communications (email, chat),
 editing (documents, shell, IDE, etc.),
@@ -78,7 +78,7 @@ Are there downsides to this screen?
 So far, I've found two.
 One is its energy consumption;
 with 55 kWh/1,000h, it's definitely on the high end of the spectrum.
-I suppose in parts that's just to its sheer size, but I'm sure things could be improved here.
+I suppose in parts that's just due to its sheer size, but I'm sure things could be improved here.
 The other thing to mention is that when using it with a MacBook Pro,
 you should make sure to have the lid of the laptop closed
 (implying that you'll need an external keyboard and mouse/touchpad),
@@ -128,10 +128,13 @@ Unfortunately, I didn't really find much time yet to do so.
 One interesting thing I noticed though from running some quick JMH benchmarks against the new link:/blog/fizzbuzz-simd-style/[Java Vector API] is that results tended to be super-stable, with a much smaller standard deviation than running the same benchmark on the x86-based laptop.
 I hope to find some time to dive a bit more into that area at some point in the future.
 
-== Cloud Compute
-
+[NOTE]
+.Cloud Compute
+====
 Every now and then, I do have the need for running something on Linux rather than macOS,
 or for spinning up multiple boxes, executing a benchmark for instance.
+Ok, ok, they are not actually running on my desk, but I thought it still might be interesting to share a few words on that.
+
 My preferred go-to platform for these scenarios is https://www.hetzner.com/cloud[Hetzner Cloud],
 as they provide flexible cloud compute options at a really attractive price tag,
 in particular capped at a fixed limit, so there's no potential for surprise bills coming in.
@@ -150,8 +153,7 @@ such as the CCX22 instance type with 4 dedicated vCPU and 16 GB RAM.
 One quick `terraform apply` and a few seconds later, I'll have a node with the specs I need.
 Only for the few hours I'm using it, I'll have to pay the increased price for the better spec,
 before scaling it back down to the CX11 instance again.
-
-I've found this approach to provide a very efficient and flexible way for dynamically obtaining compute resources for varying needs on short notice.
+====
 
 == Cameras
 
@@ -159,7 +161,7 @@ So let's change topics and talk a bit about my recording set-up.
 There's essentially three scenarios where I need to record myself and/or my screen:
 
 * _Video calls:_ working 100% from home in a globally distributed development team,
-there's no a single day where I won't have to do at least a couple of calls with my co-workers
+there's not a single day where I won't have to do at least a couple of calls with my co-workers
 * _Conference talks:_ with the global pandemic still going on,
 all the conferences have gone virtual, requiring either to pre-record or live-stream any talks
 * _Demos:_ lately, I've become a fan of recording short videos introducing new features in the projects I'm involved with, e.g. the https://debezium.io/blog/2020/10/22/towards-debezium-ui/[Debezium UI] or https://github.com/kcctl/kcctl[kcctl]
@@ -185,7 +187,7 @@ using the Micro Four Thirds interchangeable lens standard.
 image::desk_cameras.jpg[]
 
 I'm generally happy with it for this purpose:
-it provides clean HDMI output (i.e. no menu overlays when capturing the live feed via HDMI, as it' the case with some cameras),
+it provides clean HDMI output (i.e. no menu overlays when capturing the live feed via HDMI, as it's the case with some cameras),
 image quality and ergonomics are good overall.
 On the downside, it doesn't provide continuous auto-focus if you're not actually recording on the camera.
 This sounds worse than it actually is in practice:
@@ -373,3 +375,5 @@ I also hope to finish the teleprompter project and put it into daily use.
 Other than that, I am sometimes wondering whether I should get a second mirrorless camera and a video switcher like the https://www.blackmagicdesign.com/products/atemmini[Atem Mini] and explore a multi-camera set-up.
 I'm certain that this would be lots of fun,
 on the other hand I don't really have the need for it... yet?
+
+_Many thanks to https://twitter.com/hpgrahsl[Hans-Peter Grahsl] for his feedback while writing this blog post!_
