[Desk] mic clarification

--- a/content/blog/whats-on-my-desk.asciidoc
+++ b/content/blog/whats-on-my-desk.asciidoc
@@ -195,6 +195,8 @@ using the "Quick AF" option,
 it will auto-focus when turning on the camera, or when zooming in or out a bit,
 which is enough to get proper focussing in a relatively static setting such as a screen recording session.
 If you are planning to move forth and back a lot though, then you should look into other options.
+Another thing to mention is that the GX80 doesn't allow to connect an external microphone to it;
+in my case, that doesn't matter though, as I'm connecting the mic via a separate audio interface.
 
 As you'd quickly run down the camera's battery when streaming its video signal for a longer period of time,
 an external power source should be used.
