Adding Trino Community Broadcast

--- a/content/blog/debezium-talks-2021.asciidoc
+++ b/content/blog/debezium-talks-2021.asciidoc
@@ -120,6 +120,19 @@ gradually moving data from a legacy system's MySQL database over to the MongoDB 
 * 🖥️ https://speakerdeck.com/hpgrahsl/dissecting-our-legacy-the-strangler-fig-pattern-with-apache-kafka-debezium-and-mongodb-at-mongodb-dot-live-2021[Slides]
 * 🤖 https://github.com/hpgrahsl/voxxedromania21-sfp-demo[Demo source code]
 
+== Bonus: Debezium at the Trino Community Broadcast
+
+{{< youtube yuJ1r_xUcAo >}}
+
+This one is not so much a regular conference talk, but more of an informal exchange,
+so I'm adding it as a bonus here, hoping you may find it interesting too.
+https://twitter.com/bitsondatadev[Brian Olsen] and https://twitter.com/simpligility[Manfred Moser] of https://www.starburst.io/[Starburst],
+the company behind https://trino.io/[Trino],
+invited https://twitter.com/hashhar/[Ashhar Hasan], https://twitter.com/ayu5hchauhan[Ayush Chauhan], and me onto their Trino Community Broadcast.
+
+We had a great time talking about Debezium and CDC in the context of Trino and its federated query capabilities,
+learning a lot from Ashhar and Ayush about their real-world experiences from using these technologies in production.
+
 == Learning More
 
 Thanks again to Katia, Kenny, and Hans-Peter for joining the virtual conference stages with me this year!
