--- a/content/blog/debezium-talks-2021.asciidoc
+++ b/content/blog/debezium-talks-2021.asciidoc
@@ -15,7 +15,7 @@ endif::[]
 If you love to attend conferences around the world without actually leaving the comfort of your house,
 2021 certainly was (and is!) a perfect year for you.
 Tons of online conferences, many of them available for free,
-boast talks on all kinds of topics,
+are hosting talks on all kinds of topics,
 and virtual conference platforms are getting better, too.
 
 As the year is slowly reaching its end,
@@ -64,13 +64,13 @@ and which patterns there are for applying CDC to solve common problems related t
 We focused on three patterns in particular, each implemented using log-based CDC via Debezium:
 
 * The _outbox pattern_ for reliable, eventually consistent data exchange between microservices, without incurring unsafe dual writes or tight coupling
-* The _strangler fig pattern_ for gradually extract microservices from existing monolithic applications
+* The _strangler fig pattern_ for gradually extracting microservices from existing monolithic applications
 * The _saga pattern_ for coordinating long-running business transactions across multiple services, ensuring such activity gets consistently applied or aborted by all participating services
 
 We presented that talk at several conferences, including https://www.confluent.de/events/kafka-summit-europe-2021/advanced-change-data-streaming-patterns-in-distributed-systems/[Kafka Summit Europe], https://2021.berlinbuzzwords.de/session/change-data-streaming-patterns-distributed-systems[Berlin BuzzWords], and https://jlove.konfy.care/schedule.html[jLove].
 We also did a variation of the presentation at Flink Forward, discussing how to implement the different CDC patterns using Debezium and Apache Flink.
 The recording of this session should be published soon, in the meantime you can find the slides https://speakerdeck.com/hpgrahsl/change-data-streaming-patterns-in-distributed-systems-at-flink-forward-2021[here].
-I also highly recommend to take a blog post at https://developers.redhat.com/articles/2021/06/14/application-modernization-patterns-apache-kafka-debezium-and-kubernetes#after_the_migration__modernization_challenges[this blog post] by Bilgin Ibryam,
+I also highly recommend to take a look at https://developers.redhat.com/articles/2021/06/14/application-modernization-patterns-apache-kafka-debezium-and-kubernetes#after_the_migration__modernization_challenges[this blog post] by Bilgin Ibryam,
 in which he discusses these patterns in depth.
 
 * 📺 https://www.youtube.com/watch?v=CLv2EcYnr2g[Recording on YouTube]
@@ -81,7 +81,7 @@ in which he discusses these patterns in depth.
 
 {{< youtube yWFFOkWlLoY >}}
 
-Traditionally, there has been a chasm between operational databases backing enterprise application (i.e. _OLTP_ systems),
+Traditionally, there has been a chasm between operational databases backing enterprise applications (i.e. _OLTP_ systems),
 and systems meant for ad-hoc analytics use cases, such as queries run by a business analyst in the back office. (_OLAP_ systems).
 Data would typically be propagated in batches from the former to the latter,
 resulting in multi-hour delays until the analytics system would be able to run queries on changed production data.
