--- a/content/blog/debezium-talks-2021.asciidoc
+++ b/content/blog/debezium-talks-2021.asciidoc
@@ -26,7 +26,7 @@ I decided to team up with some amazing friends from the open-source community fo
 A big thank you for these phantastic collaborations to https://twitter.com/karesti[Katia Aresti], https://twitter.com/kennybastani[Kenny Bastani], and https://twitter.com/hpgrahsl[Hans-Peter Grahsl]!
 
 So without further ado,
-here are four Debezium talks I had the pleasure to do in 2021.
+here are four Debezium talks I had the pleasure to co-present in 2021.
 
 == Don't Fear Outdated Caches – Change Data Capture to the Rescue!
 
