--- a/content/blog/announcing-first-release-of-kcctl.asciidoc
+++ b/content/blog/announcing-first-release-of-kcctl.asciidoc
@@ -110,7 +110,8 @@ so as to take advantage of the API for restarting all (failed) connector tasks a
 Going beyond the scope of supporting plain Kafka Connect,
 there could also be connector specific commands, such as an option for https://github.com/kcctl/kcctl/pull/71[compacting the history topic] of Debezium connectors.
 Of course, your feature requests are welcome, too!
-Please https://github.com/kcctl/kcctl/issues[log an issue] in the kcctl project for any useful additions to the tool.
+Please https://github.com/kcctl/kcctl/issues[log an issue] in the kcctl project with your proposals for additions to the tool.
+And while at it, we'd also love to welcome you as a https://github.com/kcctl/kcctl/stargazers[stargazer 🌟] to the project!
 
 Lastly, a big thank you to all the amazing people who have contributed to kcctl up to this point:
 
