--- a/content/blog/whats-in-a-good-error-message.asciidoc
+++ b/content/blog/whats-in-a-good-error-message.asciidoc
@@ -36,7 +36,7 @@ This means the consumers of these error messages will typically be either other 
 or ops folks (encountering errors while running an application).
 
 That's in contrast to user-facing error messages,
-for which other guidance and rules should be applied.
+for which other guidance and rules (in particular in regards to security concerns) should be applied.
 For instance, you typically should not expose any implementation details in a user-facing message,
 whereas that's not that much of a concern
 -- or on the contrary, it can even be desirable -- for the kind of error messages discussed here.
